# serial-repack

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
docs/: config.md  development.md  log-format.md  matlab-export.md  release.md  replay.md
examples/: multi_channel.toml
matlab/: load_serial_repack_export.m
src/: cli.rs  config.rs  lib.rs  log_format.rs  main.rs  matlab_export.rs  packet.rs  recorder.rs  replay.rs  serial_io.rs
tests/: config_tests.rs  log_roundtrip_tests.rs  matlab_export_tests.rs  packet_parser_tests.rs  replay_tests.rs
