[package]
name = "serial-repack"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT"
description = "Multi-channel serial packet recorder, replay tool, and binary exporter."

[dependencies]
anyhow = "1"
byteorder = "1"
clap = { version = "4", features = ["derive"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serialport = { version = "4", default-features = false }
thiserror = "1"
toml = "0.8"
ctrlc = "3"

[dev-dependencies]
tempfile = "3"
